// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceConnectConnectedDeviceTest renders for deviceConnectState = Connected 1`] = `
<div
  className="deviceConnectConnectedDevice"
>
  <div
    className="label"
  >
    Connected device
  </div>
  <div
    aria-live="assertive"
    role="alert"
  />
</div>
`;

exports[`DeviceConnectConnectedDeviceTest renders for deviceConnectState = Connecting 1`] = `
<div
  className="deviceConnectConnectedDevice"
>
  <div
    className="label"
  >
    Connected device
  </div>
  <div
    aria-live="assertive"
    role="alert"
  >
    <StyledSpinnerBase
      className="deviceConnectSpinner"
      label="Connecting to mobile device"
      labelPosition="right"
      size={0}
    />
  </div>
</div>
`;

exports[`DeviceConnectConnectedDeviceTest renders for deviceConnectState = Default 1`] = `
<div
  className="deviceConnectConnectedDevice"
>
  <div
    className="label"
  >
    Connected device
  </div>
  <div
    aria-live="assertive"
    role="alert"
  />
</div>
`;

exports[`DeviceConnectConnectedDeviceTest renders for deviceConnectState = Error 1`] = `
<div
  className="deviceConnectConnectedDevice"
>
  <div
    className="label"
  >
    Connected device
  </div>
  <div
    aria-live="assertive"
    role="alert"
  >
    <React.Fragment>
      <StyledIconBase
        ariaLabel="Connection failed"
        className="connectionErrorIcon"
        iconName="statusErrorFull"
      />
      <span
        className="scannedText"
      >
        No active applications were found at the provided local host.
      </span>
    </React.Fragment>
  </div>
</div>
`;

exports[`DeviceConnectConnectedDeviceTest renders the device name when state is connected 1`] = `
<div
  className="deviceConnectConnectedDevice"
>
  <div
    className="label"
  >
    Connected device
  </div>
  <div
    aria-live="assertive"
    role="alert"
  >
    <span
      className="scannedText"
    >
      test-device
    </span>
  </div>
</div>
`;
